<resources>
    <string name="app_name">FoodShare</string>
    <string name="register_title">Welcome to Registration</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="user_type_prompt">Select User Type</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="quantity_available">Quantity Available: </string>
    <string name="restaurant_address">Restaurant Address</string>
    <string name="restaurant_rating">Rating: </string>
    <string name="restaurant_remarks">Remarks: </string>
    <string name="distance">Distance: </string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="userTypeTextView">User Type</string>
    <string name="emailTextView">User Email</string>
    <string name="usernameTextView">User Name</string>
    <!-- strings.xml -->
    <string-array name="all_restaurants">
        <item>Restaurant 1</item>
        <item>Restaurant 2</item>
        <!-- Add the rest of the restaurant names here -->
        <!-- Total 50 items -->
    </string-array>
    <string-array name="location_options">
        <item>Dallas</item>
        <item>Fortworth</item>
        <item>Plano</item>
        <item>Irving</item>
    </string-array>
    <string-array name="user_types_array">
        <item>Restaurant Owner</item>
        <item>Donation Center</item>
    </string-array>


</resources>